[package]
name = "dup_search"
version = "0.1.0"
authors = ["kazztac <42577573+kazztac@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha2 = "0.9.1"
apply_method = "0.1.0"
multimap = "0.8.2"

[dev-dependencies]
lazy_static = "1.4.0"
apply_method = "0.1.0"
