[package]
name = "dup_search"
version = "0.1.0"
authors = ["kazztac <42577573+kazztac@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
apply_method = "0.1.0"
multimap = "0.8.2"
async-std = "1.7.0"
futures = "0.3.8"
async-recursion = "0.3.1"
md-5 = "0.9.1"
digest = "0.9.0"
hex = "0.4.2"
blake3 = "0.3.7"
clap = "2.33.3"

[dev-dependencies]
lazy_static = "1.4.0"
apply_method = "0.1.0"
