[package]
name = "dup_search"
version = "0.1.0"
authors = ["kazztac <42577573+kazztac@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
apply_method = "0.1.0"
multimap = "0.8.2"
async-std = {version = "1.7.0", features = ["attributes"]}
futures = "0.3.8"
async-recursion = "0.3.1"
md-5 = "0.9.1"
digest = "0.9.0"
hex = "0.4.2"
blake3 = "0.3.7"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.60"
serde_yaml = "0.8.14"
toml = "0.5.7"
anyhow = "1.0.35"
log = "0.4.11"
pretty_env_logger = "0.4.0"

[dev-dependencies]
lazy_static = "1.4.0"
apply_method = "0.1.0"
